--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -126,7 +126,7 @@
                 <div class="product-details">
                     <h2>Biurko ENS-pro jednostanowiskowe</h2>
                     <p><strong>Opis:</strong> Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej. Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
-                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Cena netto:</strong> 4400 PLN</p>
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 89 cm</p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne Kavo</h2>
                     <p><strong>Opis:</strong> Dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
-                    <p><strong>Cena:</strong> 4900 PLN</p>
+                    <p><strong>Cena netto:</strong> 4900 PLN</p>
                     <p><strong>Wymiary:</strong> Brak opisu</p>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v1</h2>
                     <p><strong>Opis:</strong> Biurko protetyczne wyposażone w instalację elektryczną i powietrzną. Biurko posiada również kanał z przyłączem na wąż odkurzacza, który pasuje do większości kobyłek, takich jak np. Zubler. Istnieje możliwość modyfikacji według indywidualnych potrzeb. Więcej informacji pod numerem telefonu.</p>
-                    <p><strong>Cena:</strong> 4300 PLN</p>
+                    <p><strong>Cena netto:</strong> 4300 PLN</p>
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 88-90 cm</p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v2</h2>
                     <p><strong>Opis:</strong> Biurko protetyczne wyposażone jest w dwie dmuchawki sprężonego powietrza oraz instalację elektryczną podblatową z trzema gniazdami na każde stanowisko. Posiada dwa kanały pod kobyłkę, półkę na prace oraz dwie maty robocze. Istnieje możliwość dokupienia kobyłek, zmiany wymiarów i kolorystyki, a także instalacji gazowej z podwójnym zaworem. Więcej informacji pod numerem telefonu.</p>
-                    <p><strong>Cena:</strong> 5900 PLN</p>
+                    <p><strong>Cena netto:</strong> 5900 PLN</p>
                     <p><strong>Wymiary:</strong> 270 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v3</h2>
                     <p><strong>Opis:</strong> Sprzedam nowe biurko dwustanowiskowe wyposażone w instalację gazową na dwa palniki, a także instalację elektryczną i powietrzną. Biurko posiada półkę na prace. Istnieje możliwość zamontowania wyciągu lub zmiany wymiarów. Oferuję transport. Więcej informacji pod numerem telefonu.</p>
-                    <p><strong>Cena:</strong> 4900 PLN</p>
+                    <p><strong>Cena netto:</strong> 4900 PLN</p>
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 88-90 cm</p>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v4</h2>
                     <p><strong>Opis:</strong> Biurko protetyczne ENS-pro jednostanowiskowe jest solidnie wykonane z płyty laminowanej, zarówno blat, jak i szafki, które są dostępne w różnych kolorach do wyboru. Szuflady zostały wyposażone w mechanizm cichego domyku, a nad kolanami znajduje się wkład stalowy. Biurko posiada instalację elektryczną oraz dmuchawki sprężonego powietrza, co zwiększa jego funkcjonalność.Dodatkowe opcje, które można zamontować, obejmują kobyłki, podłokietniki, instalację gazową, lampy oraz odciągi pyłu. Dzięki tym możliwościom biurko można dostosować do indywidualnych potrzeb użytkownika.</p>
-                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Cena netto:</strong> 4400 PLN</p>
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v5</h2>
                     <p><strong>Opis:</strong> Biurko jednostanowiskowe cechuje się solidnym blatem wykonanym z litego buku oraz stabilnym stelażem aluminiowym. Szafki są wykonane z płyty laminowanej, dostępnej w różnych kolorach, co pozwala na dopasowanie do preferencji estetycznych. Szuflady wyposażone są w mechanizm cichego domyku, a nad kolanami znajduje się stalowy wkład do szuflad, zapewniający dodatkową wytrzymałość i funkcjonalność. Biurko jest wyposażone w instalację elektryczną oraz dmuchawki sprężonego powietrza, co umożliwia wygodne i efektywne wykonywanie pracy. Dodatkowo, istnieje możliwość rozbudowy biurka o kobyłki, podłokietniki, instalację gazową, lampy oraz odciągi pyłu, co pozwala na indywidualne dostosowanie do specyficznych potrzeb użytkownika.</p>
-                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Cena netto:</strong> 4400 PLN</p>
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v6</h2>
                     <p><strong>Opis:</strong> Biurko protetyczne dwustanowiskowe oferuje dwie dmuchawki sprężonego powietrza oraz instalację elektryczną podblatową z trzema gniazdami na każde stanowisko. Posiada także dwa kanały pod kobyłkę, półkę na pracę oraz dwie maty robocze. Istnieje możliwość dokupienia dodatkowych kobyłek, zmiany wymiarów oraz kolorystyki. Dodatkowo, istnieje opcja instalacji gazowej z podwójnym zaworem, co zwiększa funkcjonalność biurka, umożliwiając dostosowanie go do specyficznych potrzeb użytkownika.</p>
-                    <p><strong>Cena:</strong> 5400 PLN</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                 <div class="product-details">
                     <h2>Biurko Protetyczne v7</h2>
                     <p><strong>Opis:</strong> Oferta dotyczy biurka czterostanowiskowego, które charakteryzuje się solidnym blatem z litego buku oraz szafkami z płyty laminowanej, dostępnymi w różnych kolorach. Szuflady wyposażone są w mechanizm cichego domyku, a nad kolanami znajduje się wkład stalowy, zapewniający dodatkową wytrzymałość i stabilność. Biurko jest wyposażone w instalację elektryczną oraz dmuchawki sprężonego powietrza, co ułatwia pracę przy skomplikowanych zadaniach protetycznych.Dodatkowe opcje do wyboru obejmują możliwość montażu kobyłek, podłokietników, instalacji gazowej, lamp oraz odciągów pyłu, co pozwala na indywidualne dostosowanie biurka do potrzeb użytkownika oraz specyficznych wymagań miejsc pracy.</p>
-                    <p><strong>Cena:</strong> 13500 PLN</p>
+                    <p><strong>Cena netto:</strong> 13500 PLN</p>
                     <p><strong>Wymiary:</strong> 160 cm x 160 cm x 88-90 cm</p>
                 </div>
             </div>
