--- a/index.html
+++ b/index.html
@@ -13,140 +13,138 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: url('tlo.jpg') center/cover fixed; /* Tło strony */
+            background-color: #f4f4f4;
+            color: #333;
         }
 
         header {
             width: 100%;
             padding: 20px;
-            background-color: #333;
+            background-color: #004080;
             color: #fff;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         header img {
-            width: 80px;
-            height: 80px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
-            margin-right: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            margin-right: 20px;
         }
 
-        h1 {
-            margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
-            font-size: 1.5em;
-            color: #FFF; /* Zmiana koloru tekstu na czarny */
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
         }
 
         nav {
             width: 100%;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
+            background-color: #003366;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            background: rgba(255, 255, 255, 0.8); /* Tło dla odnośników */
+            justify-content: center;
+            padding: 10px 0;
         }
 
         nav a {
-            flex-basis: calc(50% - 20px);
-            margin: 10px;
+            color: #fff;
             text-decoration: none;
-            color: #000; /* Zmiana koloru tekstu na czarny */
-            font-weight: bold;
-            padding: 20px;
-            border-radius: 8px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-sizing: border-box;
-            text-align: center;
-            font-size: 1.2em;
-            position: relative;
-        }
-
-        nav a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.5); /* Przezroczyste tło */
-            border-radius: 8px;
+            margin: 0 15px;
+            padding: 10px 20px;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
 
         nav a:hover {
-            background-color: #555;
-            color: #fff;
-            transform: scale(1.05);
+            background-color: #00509e;
+        }
+
+        .main-content {
+            width: 100%;
+            max-width: 1200px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .main-image {
-            margin: 20px;
+            width: 100%;
+            max-width: 800px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 50%; /* Szerokość zdjęcia głównego */
-            max-width: 400px; /* Maksymalna szerokość zdjęcia */
-            transition: opacity 0.5s ease; /* Efekt przejścia */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: opacity 0.5s ease;
+            margin-bottom: 20px;
+        }
+
+        .contact-form {
+            width: 100%;
+            max-width: 600px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .contact-form button {
+            padding: 10px 20px;
+            background-color: #004080;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact-form button:hover {
+            background-color: #00509e;
         }
 
         footer {
             width: 100%;
             padding: 20px;
-            background-color: #333;
-            color: #FFF; /* Zmiana koloru tekstu na czarny */
+            background-color: #003366;
+            color: #fff;
             text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: auto;
         }
 
         /* Media Queries dla telefonów komórkowych */
         @media (max-width: 767px) {
             header {
-                padding: 10px;
+                flex-direction: column;
+                text-align: center;
             }
 
             header img {
-                width: 60px;
-                height: 60px;
-            }
-
-            h1 {
-                font-size: 1.2em;
+                margin: 0 0 10px 0;
             }
 
             nav {
-                padding: 5px;
+                flex-wrap: wrap;
             }
 
             nav a {
-                flex-basis: calc(100% - 20px);
-            }
-
-            .main-image {
-                width: 90%; /* Dostosuj szerokość zdjęcia głównego */
-            }
-        }
-
-        /* Media Queries dla tabletów i większych ekranów */
-        @media (min-width: 768px) {
-            nav a {
-                flex-basis: calc(33.33% - 20px);
+                margin: 5px;
             }
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo Firmy">
-        <h1>R.S. Labor Meble</h1>
+        <div>
+            <img src="logo.png" alt="Logo Firmy">
+            <h1>R.S. Labor Meble</h1>
+        </div>
     </header>
 
     <nav>
@@ -158,7 +156,21 @@
         <a href="kontakt.html">Kontakt</a>
     </nav>
 
-    <img src="zdjecie1.jpg" alt="Zdjęcie główne" class="main-image">
+    <div class="main-content">
+        <img src="zdjecie1.jpg" alt="Zdjęcie główne" class="main-image">
+
+        <div class="contact-form">
+            <form action="contact.php" method="post">
+                <label for="name">Imię i nazwisko:</label><br>
+                <input type="text" id="name" name="name" required><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br>
+                <label for="message">Wiadomość:</label><br>
+                <textarea id="message" name="message" rows="5" required></textarea><br>
+                <button type="submit">Wyślij</button>
+            </form>
+        </div>
+    </div>
 
     <footer>
         © 2024 R.S Labor Meble
@@ -176,10 +188,10 @@
             setTimeout(() => {
                 mainImage.src = imageList[currentIndex];
                 mainImage.style.opacity = 1; // Efekt pojawiania się
-            }, 700); // Czas oczekiwania przed zmianą obrazka (w milisekundach)
+            }, 500); // Czas oczekiwania przed zmianą obrazka (w milisekundach)
         }
 
-        setInterval(changeImage, 7000); // zmień czas przewijania na dowolną wartość w milisekundach (np. co 3 sekundy)
+        setInterval(changeImage, 5000); // zmień czas przewijania na dowolną wartość w milisekundach (np. co 5 sekund)
     </script>
 </body>
 </html>
