--- a/index.html
+++ b/index.html
@@ -3,183 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R.S. Labor-Meble</title>
-    <style>
-        /* Globalne style */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background: url('tlo.jpg') center/cover fixed; /* Tło strony */
-        }
-
-        header {
-            width: 100%;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-
-        header img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            margin-right: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        h1 {
-            margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
-            font-size: 1.5em;
-            color: #FFF; /* Zmiana koloru tekstu na czarny */
-        }
-
-        nav {
-            width: 100%;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            background: rgba(255, 255, 255, 0.8); /* Tło dla odnośników */
-        }
-
-        nav a {
-            flex-basis: calc(50% - 20px);
-            margin: 10px;
-            text-decoration: none;
-            color: #000; /* Zmiana koloru tekstu na czarny */
-            font-weight: bold;
-            padding: 20px;
-            border-radius: 8px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-sizing: border-box;
-            text-align: center;
-            font-size: 1.2em;
-            position: relative;
-        }
-
-        nav a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.5); /* Przezroczyste tło */
-            border-radius: 8px;
-        }
-
-        nav a:hover {
-            background-color: #555;
-            color: #fff;
-            transform: scale(1.05);
-        }
-
-        .main-image {
-            margin: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 50%; /* Szerokość zdjęcia głównego */
-            max-width: 400px; /* Maksymalna szerokość zdjęcia */
-            transition: opacity 0.5s ease; /* Efekt przejścia */
-        }
-
-        footer {
-            width: 100%;
-            padding: 20px;
-            background-color: #333;
-            color: #FFF; /* Zmiana koloru tekstu na czarny */
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: auto;
-        }
-
-        /* Media Queries dla telefonów komórkowych */
-        @media (max-width: 767px) {
-            header {
-                padding: 10px;
-            }
-
-            header img {
-                width: 60px;
-                height: 60px;
-            }
-
-            h1 {
-                font-size: 1.2em;
-            }
-
-            nav {
-                padding: 5px;
-            }
-
-            nav a {
-                flex-basis: calc(100% - 20px);
-            }
-
-            .main-image {
-                width: 90%; /* Dostosuj szerokość zdjęcia głównego */
-            }
-        }
-
-        /* Media Queries dla tabletów i większych ekranów */
-        @media (min-width: 768px) {
-            nav a {
-                flex-basis: calc(33.33% - 20px);
-            }
-        }
-    </style>
+    <title>Nazwa Firmy - Strona Główna</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo Firmy">
-        <h1>R.S. Labor Meble</h1>
+        <div class="logo-container">
+            <img src="logo.png" alt="Logo Firmy" class="logo">
+            <h1>R.S. Labor meble</h1>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <nav>
-        <a href="meble_protetyczne.html">Meble protetyczne</a>
-        <a href="meble_stomatologiczne.html">Meble do gabinetów stomatologicznych</a>
-        <a href="urzadzenia_protetyczne.html">Urządzenia protetyczne</a>
-        <a href="komis.html">Komis mebli i urządzeń</a>
-        <a href="o_nas.html">O nas</a>
-        <a href="kontakt.html">Kontakt</a>
-    </nav>
-
-    <img src="zdjecie1.jpg" alt="Zdjęcie główne" class="main-image">
-
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Witamy na naszej stronie!</h2>
+                <p>Jesteśmy liderami w branży i oferujemy najlepsze rozwiązania dla Twoich potrzeb.</p>
+                <a href="kontakt.html" class="cta-button">Kontakt</a>
+            </div>
+        </section>
+        <section class="features">
+            <div class="feature">
+                <div class="feature-circle">
+                    <span class="feature-number">1</span>
+                </div>
+                <h3>Innowacyjne rozwiązania</h3>
+                <p>Nasze usługi są oparte na najnowszych technologiach, które zapewniają najlepsze wyniki.</p>
+            </div>
+            <div class="feature">
+                <div class="feature-circle">
+                    <span class="feature-number">2</span>
+                </div>
+                <h3>Profesjonalny zespół</h3>
+                <p>Doświadczony zespół specjalistów, który zadba o wszystkie Twoje potrzeby.</p>
+            </div>
+            <div class="feature">
+                <div class="feature-circle">
+                    <span class="feature-number">3</span>
+                </div>
+                <h3>Doskonale dopasowane rozwiązania</h3>
+                <p>Personalizujemy nasze usługi, aby idealnie odpowiadały Twoim wymaganiom.</p>
+            </div>
+        </section>
+        <section class="tabs">
+            <h2>Nasze usługi</h2>
+            <div class="tabs-container">
+                <a href="meble_protetyczne.html" class="tab">Meble protetyczne</a>
+                <a href="meble_stomatologiczne.html" class="tab">Meble do gabinetów stomatologicznych</a>
+                <a href="urzadzenia_protetyczne.html" class="tab">Urządzenia protetyczne</a>
+                <a href="komis.html" class="tab">Komis mebli i urządzeń</a>
+            </div>
+        </section>
+    </main>
     <footer>
-        © 2024 R.S Labor Meble
+        <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
-
-    <script>
-        // Skrypt JavaScript do przewijania zdjęć głównych
-        const mainImage = document.querySelector('.main-image');
-        const imageList = ['zdjecie1.jpg', 'zdjecie2.jpg', 'zdjecie3.jpg', 'zdjecie4.jpg', 'zdjecie5.jpg', 'zdjecie6.jpg'];
-        let currentIndex = 0;
-
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % imageList.length;
-            mainImage.style.opacity = 0; // Efekt znikania
-            setTimeout(() => {
-                mainImage.src = imageList[currentIndex];
-                mainImage.style.opacity = 1; // Efekt pojawiania się
-            }, 700); // Czas oczekiwania przed zmianą obrazka (w milisekundach)
-        }
-
-        setInterval(changeImage, 7000); // zmień czas przewijania na dowolną wartość w milisekundach (np. co 3 sekundy)
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
