--- a/galeria.html
+++ b/galeria.html
@@ -15,12 +15,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">O nas</a></li>
-                <li><a href="services.html">Usługi</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="o_nas.html">O nas</a></li>
+                <li><a href="galeria.html">Usługi</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Nazwa Firmy. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 R.S.Labor meble Wszelkie prawa zastrzeżone.</p>
     </footer>
 </body>
 </html>
