--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -162,6 +162,6 @@
     <footer>
         <p>&copy; 2024 Nazwa Firmy. Wszelkie prawa zastrzeżone.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
